--- a/my-app/src/components/footerstyle.css
+++ b/my-app/src/components/footerstyle.css
@@ -37,7 +37,7 @@
     padding: 1rem;
 }
 
-.socia{
+.social{
     margin-top: 1rem;
 }
 
@@ -47,6 +47,17 @@ h4{
 }
 p{
     font-size: 1.2rem;
+}
+
+@media screen and (max-width: 640px) {
+    .footer .footer-container {
+        grid-template-columns: 1fr 0.5fr;
+       
+    }
+
+    .footer-container p {
+        white-space: nowrap;
+    }
 }
 
 
