--- a/my-app/src/components/herostyles.css
+++ b/my-app/src/components/herostyles.css
@@ -56,7 +56,7 @@
     margin: 1rem 0.2rem;
 }
 
-@media screen and (ma-width:640px){
+@media screen and (max-width:640px){
     .hero .content h1{
         font-size: 3rem;
         
