--- a/my-app/src/components/workcardstyles.css
+++ b/my-app/src/components/workcardstyles.css
@@ -5,7 +5,7 @@
 }
 
 .project-container{
-    max-width: 500px;
+    width: 500px;
     
     margin:auto;
     display:grid;
@@ -18,6 +18,7 @@
 .project-card{
     background: #1a1919;
     padding: 0rem 0rem;
+    
 
 }
 
