--- a/my-app/src/components/aboutme/aboutcontent.css
+++ b/my-app/src/components/aboutme/aboutcontent.css
@@ -14,10 +14,13 @@
     padding: 1rem;
     max-width: 350px;
 }
+.about .left h1{
+    font-size: 60px;
+}
 
 .about .left p{
     margin: 1.2rem 0;
-    font-size: 20px;
+    font-size: 19px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
@@ -53,7 +56,7 @@
     z-index: 6;
 }
 
-.right .bottom{
+.right .img-container .bottom{
     grid-column: 4/-1;
     grid-row:1;
     z-index: 5;
