--- a/my-app/src/components/experience/experiencecontentstyles.css
+++ b/my-app/src/components/experience/experiencecontentstyles.css
@@ -29,4 +29,47 @@
     margin:0;
     color:aquamarine;
 
+
+}
+
+.content-card{
+    border: 1px solid #230;
+    border-radius: 10px;
+    box-shadow: 7px 7px 7px #083;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    max-width: 250px;
+    display: inline-block;
+    transition:0.3s;
+    animation: ease-in-out;
+}
+.content-card:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 0px 20px 0px;
+
+}
+
+.content-card .content-image{
+    max-width:90%;
+    height: auto;
+    border-radius: 20%;
+    margin-bottom: 10px;
+
+}
+
+.content-card .content-image img{
+    width:100%;
+    padding:1rem 0;
+    border-radius: 15%;
+    margin-top: 10px;
+    margin-bottom: 16px;
+    border-color: aliceblue;
+    transition: 3s;
+
+}
+
+.content-card .content-image img:hover{
+    transform: scale(1.4,1.4);
+    box-shadow: #083;
 }
